<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_geek_pkg</name>
  <version>0.0.1</version>
  <description>First ROS2 package</description>
  <maintainer email="igor.recio.h@gmail.com">Igor Recio</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
